--- a/weigh.html
+++ b/weigh.html
@@ -1,11 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weigh In Converter</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="weigh.css">
+
 </head>
+
 <body>
-    
+    <div class="container">
+        <h1 class="text-center my-5">Weigh In Converter</h1>
+        <div class="d-flex mt">
+            <select class="form-control form-control-lg" id="weighFrom">
+                <option value="kilogram">Kilogram</option>
+                <option value="pounds">Pounds</option>
+                <option value="ounces">Ounces</option>
+            </select>
+
+            <p id="toText">To</p>
+
+            <select class="form-control form-control-lg" id="weighTo">
+                <option value="kilogram">Kilogram</option>
+                <option value="pounds">Pounds</option>
+                <option value="ounces">Ounces</option>
+            </select>
+        </div>
+
+        <div class="form-group row  my-5">
+            <input type="number" name="from" id="from" class="form-control col-4 offset-4">
+        </div>
+
+        <div id="result"></div>
+    </div>
+
+
+
+
+    <script src="weigh.js"></script>
 </body>
+
 </html>
